2.0-beta2

* Added lint - static code analysis for Android Maven projects
* Add inline setting of milestone and assignee in issue lists

* Fix issues with animations not working offline
* Fix issue where disabled child projects were still being shown in menu

2.0-beta1

* Add footer text for email notifications - fixes issue:20
* Update membership and permission screens
* Better styling to burndown legends and headings
* Add an hours with fraction string formatter
* Show accounts their own velocity info

2.0-alpha6

* Add enquiry issue type
* Added scan-build - static code analysis for XCode projects

* Improve interface speed and offline support
* Add test notes to Issue entity
* Log changes made to issue estimates

2.0-alpha5

* Update IRC bot to latest for flood prevention

* Fix email notifications to gmail
* Correct precision of hours in milestone export
* Fix NPE in task render page

2.0-alpha4

* Added Windows support

* Fixed api doc generation for non root filesystems
* Fix updater to pull downloads from GitHub

2.0-alpha3

* Made availabile under the AGPL v3 License
* Better handling of 404 pages and typos in URLs
* Add API documentation generation with doxygen

* Fix issues with timezone in date/time pickers
