@@ -61,7 +61,7 @@
           <td><span wicket:id="totalram">1</span></td>
         </tr>
 
-        <tr><td colspan="4">&nbsp;</td></tr>
+        <tr><td colspan="4" class="nobackground">&nbsp;</td></tr>
         <tr>
           <th colspan="4">Swapped Space</th>
         </tr>
@@ -86,7 +86,7 @@
           <td><span wicket:id="maxActive">1</span></td>
         </tr>
 
-        <tr><td colspan="4">&nbsp;</td></tr>
+        <tr><td colspan="4" class="nobackground">&nbsp;</td></tr>
         <tr>
           <th colspan="4">Idle Connections</th>
         </tr>
