@@ -35,6 +35,13 @@
             <th>Value</th>
             <th>&nbsp;</th>
           </tr>
+          <tr>
+            <td><span class="title">debug enabled</span></td>
+            <td>
+              <input type="checkbox" wicket:id="debug" />
+            </td>
+            <td>&nbsp;</td>
+          </tr>
           <wicket:container wicket:id="item">
           <tr>
             <td><span wicket:id="title" class="title">title</span></td>
